--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="🔥Any beauty will spread her legs if you have a big penis!🍆💦">
 <meta property="og:description" content="😉I’ve been taking Longjack XXXL for just a month, and results are already exceeding all my expectations.👍">
-<meta property="og:image" content="https://i.imgur.com/x59KF3M.png">
+<meta property="og:image" content="https://i.imgur.com/jh3v8wy.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
