--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="🔥Any beauty will spread her legs if you have a big penis!🍆💦">
-<meta property="og:description" content="😉I’ve been taking Longjack XXXL for just a month, and results are already exceeding all my expectations.👍">
-<meta property="og:image" content="https://i.imgur.com/jh3v8wy.png">
+<meta property="og:title" content="🔥Like🔥">
+<meta property="og:description" content="💥Super💥">
+<meta property="og:image" content="https://zastavok.net/main/priroda/165274015695.jpg">м
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
