--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="🔥Like🔥">
 <meta property="og:description" content="💥Super💥">
-<meta property="og:image" content="https://img5.goodfon.ru/wallpaper/nbig/1/c1/patagonia-chile-cave-sea-rocks-water-boat-water-ripples-natu.jpg">
+<meta property="og:image" content="https://zastavok.net/main/priroda/165274015695.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
