--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="🔥click the button to learn more!👉👉👉">
 <meta property="og:description" content="😉I’ve been taking Longjack XXXL for just a month, and results are already exceeding all my expectations.👍">
-<meta property="og:image" content="https://i.imgur.com/gwpMfu5.png">
+<meta property="og:image" content="https://i.imgur.com/v2Xt4fC.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
